--- a/A1.ipynb
+++ b/A1.ipynb
@@ -104,6 +104,73 @@
         "\n",
         "In later experiments, they deliberately construct scenarios that work to the algorithm's strengths. These provide useful information about the upper limits of potential offered by the LSTM architecture, however the lack of benchmark given within the addition and multiplication problems limits the usefulness of the data."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sAZrOdSNmlQF",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Application and X-factor**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J3jvnA1EmqvT",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the text, the authors identify the following practical applications for future research in LSTM: time series prediction, music composition, and\n",
+        "speech processing. Applications for LSTM that they did not identify include: text processing, image identification (feeding the image in fragments) and captions, and language translation.\n",
+        "\n",
+        "However, the authors seemed to have an insight into the common thread between all of these applications. In any scenario where varying or indeterminate lengths of a series of data contribute to later data points, LSTM is less biased than other neural networks existing in this period.\n",
+        "\n",
+        "An alternative solution to conventional LSTM was proposed by Baytas et al. (2017), called T-LSTM, which is better at identifying recurring patterns despite large lengths of time between them. It was only applied to a limited scenario, but may allow for further reduction in bias for common applications such as speech processing .\n",
+        "\n",
+        "At the point this paper was published however, the clear direction of further research would be into memory build-up, experimenting with a variety of network topologies, and solutions to prevent memory cells from containing redundant or non-useful information."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "haHjWQH7vTP1",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Presentation**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ODYIk-VovW_b",
+        "colab_type": "text"
+      },
+      "source": [
+        "hi"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3hFhhEq1vcpk",
+        "colab_type": "text"
+      },
+      "source": [
+        "**References**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6041sHkUvexP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Baytas I. M., Xiao C. Zhang X., Wang F., Jain A. & Zhou J. 2017, 'Patient Subtyping via Time-Aware LSTM Networks', *Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining*, pp 65-74."
+      ]
     }
   ]
 }
