--- a/A1.ipynb
+++ b/A1.ipynb
@@ -70,7 +70,7 @@
       "source": [
         "LSTM architecture has been foundational to the development of recurrent neural networks, and later LSTM networks were applied in Google Translate, Siri, and Amazon Alexa, and other mainstream products. This is because the LSTM architecture allows the system to react to the context of time series data, rather than the individual points of data, which was an important breakthrough. Earlier methods could be adapted to time gaps, but it was infeasible for this to extend over large periods.\n",
         "\n",
-        "They claim their design enforces constant error flow, and prevents the error signal from exploding or vanishing. This is incorrect. Their solution is a bold first step to prevent the error signal vanishing, but it does not prevent either case. Instead, removing the risk of an error signal vanishing is addressed in the addition of a third gate on memory cells known as a “forget gate” in later papers. The issue of the signal exploding is inherent in how the signal is represented. It can be mitigated, which this architecture does, but it cannot be removed. As such, the repeated reference to this idea throughout the paper demonstrates the authors fail to understand the limitations of their own architecture.\n",
+        "They claim their design enforces constant error flow, and prevents the error signal from exploding or vanishing. This is incorrect. Their solution is a bold first step to prevent the error signal vanishing, but it does not prevent either case. Instead, removing the risk of an error signal vanishing is addressed in the addition of a third gate on memory cells known as a “forget gate” in later papers (Gers F. et al, 1999). The issue of the signal exploding is inherent in how the signal is represented. It can be mitigated, which this architecture does, but it cannot be removed. As such, the repeated reference to this idea throughout the paper demonstrates the authors fail to understand the limitations of their own architecture.\n",
         "\n",
         "The authors' bias is simple in origin. It serves their interests to play up their achievements, as recognition can open doors in the deep learning industry, as in any other. In numerous places in the article, the authors put forward a pretense that they are discussing flaws and limitations in their system, but turn the argument around, only wishing to discuss its superiority over other systems. If they were to indicate that this was an early build, and that their design failed to complete it's initial goal of eradicating signal exploding or signal vanishing, this could reduce their claim as the designers of LSTM, which they had been working on for almost a decade. Talking down their system could conceal what an achievement this is, and limit their ability to conduct further research in this field."
       ]
@@ -127,9 +127,9 @@
         "\n",
         "However, the authors seemed to have an insight into the common thread between all of these applications. In any scenario where varying or indeterminate lengths of a series of data contribute to later data points, LSTM is less biased than other neural networks existing in this period.\n",
         "\n",
-        "An alternative solution to conventional LSTM was proposed by Baytas et al. (2017), called T-LSTM, which is better at identifying recurring patterns despite large lengths of time between them. It was only applied to a limited scenario, but may allow for further reduction in bias for common applications such as speech processing .\n",
+        "An alternative solution to conventional LSTM was proposed by Baytas et al. (2017), called T-LSTM, which is better at identifying recurring patterns despite large lengths of time between them. It was only applied to a limited scenario, but may allow bias reduction for common LSTM applications such as speech processing.\n",
         "\n",
-        "At the point this paper was published however, the clear direction of further research would be into memory build-up, experimenting with a variety of network topologies, and solutions to prevent memory cells from containing redundant or non-useful information."
+        "At the point this paper was published however, the clear direction of further research would be into memory build-up, experimenting with a variety of network topologies, and solutions to prevent memory cells from containing redundant or non-useful information. A novel use may be on messageboards, flagging possible cases of hate speech, profanity etc. for moderation. LSTM may be particularly useful to flag cases where low alert words are strung together in an offensive fashion, and to avoid flagging cases where a high alert word is used in an acceptable fashion."
       ]
     },
     {
@@ -149,7 +149,9 @@
         "colab_type": "text"
       },
       "source": [
-        "hi"
+        "The structure of the report is well thought out, and carries a consistent flow from section to section. Appendix A.1 and A.2 could have been referenced in Section 3, and the results for the experiments could have been placed within the section on the experiment, rather than on the page after it.\n",
+        "\n",
+        "The text in Long Short-Term memory is hard to read due to the use of dark grey text instead of black. This is acceptable in body text, but causes issues when combined with italicised descriptions, subscript and superscript characters, and primes. This is in harsh contrast to the diagrams which use chunky san-serif black text."
       ]
     },
     {
@@ -169,7 +171,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Baytas I. M., Xiao C. Zhang X., Wang F., Jain A. & Zhou J. 2017, 'Patient Subtyping via Time-Aware LSTM Networks', *Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining*, pp 65-74."
+        "Baytas I. M., Xiao C. Zhang X., Wang F., Jain A. & Zhou J. 2017, 'Patient Subtyping via Time-Aware LSTM Networks', *Proc. KDD*, vol 23, pp 65-74.\n",
+        "\n",
+        "Gers F., Schmidhuber J. & Cummins F. 1999. 'Learning to Forget: Continual Prediction with LSTM'. *Proc. ICANN*, vol 8, pp 850–855."
       ]
     }
   ]
