--- a/A1.ipynb
+++ b/A1.ipynb
@@ -28,6 +28,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Ey281_D7J9OR",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://colab.research.google.com/drive/1_dcyR94FasEmHCH6ma8IcBljpkbqZJqN\n",
+        "\n",
+        "https://github.com/lordbigot/UTS_ML2019_ID13191655/blob/master/A1.ipynb"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "qMCFXtnBvs2s",
         "colab_type": "text"
       },
