--- a/A2B.ipynb
+++ b/A2B.ipynb
@@ -27,6 +27,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "T-VvL50yr5HX",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://colab.research.google.com/drive/1VVHMNMYm5w9ezkWLKCPxiaP0z18Rz8HC\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Rqj6GYRgL1Ap",
         "colab_type": "text"
       },
@@ -930,7 +941,35 @@
         "\n",
         "However, the execution time is substantially lacking. This test, on a set of 200 2-dimensional data points, took several minutes to produce a single classifier. The time increase due to raising the number of data points may occur on a polynomial scale, and raising the dimensions on an exponential scale.\n",
         "\n",
-        "This raises concerning issues, as discussed in the Conclusion "
+        "This raises concerning issues, as discussed in the Reflection"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r6V0CUZKfQZl",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Reflection**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o8LA4ZF5fXXQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "The addition of vector nodes to the decision tree classifier served the role of reducing bias, but in doing so, added variance.\n",
+        "\n",
+        "Although there are issues in the current implementation of this concept, I believe they can be overcome, and the results of this algorithm may become more consistent.\n",
+        "\n",
+        "The greatest problem with the current algorithm, is the sheer quantity of processing required to produce results. Although there are places where processing may be cut out with little loss, there remain parts of the algorithm that would benefit with additional processing. However, the execution time is a significant flaw. This algorithm may produce effective results in comparison to other decision trees, but it lacks many of the important benefits of decision trees.\n",
+        "\n",
+        "It is not fast. It is less simple to apply outside of the system than most available counterparts. It does not scale well. It benefits from data normalisation.\n",
+        "\n",
+        "I believe this algorithm, if sufficiently developed, has a niche. The produced classifiers may not be simple, but they are still reasonably practical for offline use by a man with a calculator, and possess a lack of bias which can be uncommonly found in this case."
       ]
     }
   ]
