--- a/A3.ipynb
+++ b/A3.ipynb
@@ -227,7 +227,214 @@
         "\n",
         "As a seperate factor, a balance should be made between long term and short term cumulative regret. For good long term results, the best test that can be done is trying each lever in order, until the lever is confirmed to be no longer useful. For better short term results, testing of levers unlikely to return high values should be delayed, or stopped entirely.\n",
         "\n",
-        "Now that the components have been isolated, it may be worth re-examining some variables. My earlier rate of testing 1 new lever every 4 pulls was based on the assumption that the array was not skewed. However, given that we are testing gambling machines, the existence of a right skew is likely, as the existence of high jackpots is often used. As a result, I will change the rate to 1 in 3 pulls. In addition, this may decrease the long term cumulative regret, as good levers later in the set can be found before a significant investment is made in other, earlier levers."
+        "Now that the components have been isolated, it may be worth re-examining some variables. My earlier rate of testing 1 new lever every 4 pulls was based on the assumption that the array was not skewed. However, given that we are testing gambling machines, the existence of a right skew is likely, as the existence of high jackpots is often used. As a result, I will change the rate to 1 in 3 pulls. In addition, this may decrease the long term cumulative regret, as good levers later in the set can be found before a significant investment is made in other, earlier levers.\n",
+        "\n",
+        "Another factor worth reevaluating is the scaling proportions of the best and worst levers. The existing practice of the algorithm, using squares to ensure that pulling of lesser levers drops off, has drawbacks. To minimise long-term regret, the algorithm would function best by pulling each lever in uniform proportions. To minimise short-term regret, the algorithm would function best by pulling the favored lever repeatedly. To compromise, and perform well uniformly, it should make many pulls of the best performing lever, but also pull other, milder performing levers. \n",
+        "\n",
+        "Factoring all of this into consideration, I have produced the following algorithm:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gSM2HS1-_una",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math\n",
+        "\n",
+        "def partition_levers(levers, output_sums, output_instances, low, high):\n",
+        "    i = (low - 1)\n",
+        "    pivot = output_sums[high] / output_instances[high]\n",
+        "    for j in range(low, high):\n",
+        "        if output_sums[j] / output_instances[j] >= pivot:\n",
+        "            i += 1\n",
+        "            levers[i], levers[j] = levers[j], levers[i]\n",
+        "            output_sums[i], output_sums[j] = output_sums[j], output_sums[i]\n",
+        "            output_instances[i], output_instances[j] = output_instances[j], output_instances[i]\n",
+        "    levers[i+1], levers[high] = levers[high], levers[i+1]\n",
+        "    output_sums[i+1], output_sums[high] = output_sums[high], output_sums[i+1]\n",
+        "    output_instances[i+1], output_instances[high] = output_instances[high], output_instances[i+1]\n",
+        "    return (i+1)\n",
+        "\n",
+        "\n",
+        "def quick_lever_sort(levers, output_sums, output_instances, low, high):\n",
+        "    if low < high:\n",
+        "        pi = partition_levers(levers, output_sums, output_instances, low, high)\n",
+        "        quick_lever_sort(levers, output_sums, output_instances, low, pi-1)\n",
+        "        quick_lever_sort(levers, output_sums, output_instances, pi+1, high)\n",
+        "        \n",
+        "        \n",
+        "def hoeffding_maximum_confident_displacement(number_of_samples, given_range):\n",
+        "    return 1.9206455826 * given_range / math.sqrt(number_of_samples)\n",
+        "\n",
+        "\n",
+        "def hoeffding_comparison(high_number_of_samples, high_mean, low_number_of_samples, low_mean, given_range):\n",
+        "    return low_mean + hoeffding_maximum_confident_displacement(low_number_of_samples, given_range) > high_mean - hoeffding_maximum_confident_displacement(high_number_of_samples, given_range)\n",
+        "\n",
+        "\n",
+        "def pull_known_lever(levers, output_sums, output_instances, given_range):\n",
+        "    quick_lever_sort(levers, output_sums, output_instances, 0, len(output_sums) - 1)\n",
+        "    known_levers = len(output_instances)\n",
+        "    minimum_lever_exponential_base = pow(output_instances[0], 1 / (2.0*known_levers))\n",
+        "    minimum_lever_exponential_base_index = 0\n",
+        "    for i in range(1, known_levers):\n",
+        "        if hoeffding_comparison(output_instances[0], output_sums[0] / output_instances[0], output_instances[i], output_sums[i] / output_instances[i], given_range):\n",
+        "            lever_exponential_base = pow(output_instances[i], 1 / (2.0*known_levers-i))\n",
+        "            if lever_exponential_base < minimum_lever_exponential_base:\n",
+        "                minimum_lever_exponential_base = lever_exponential_base\n",
+        "                minimum_lever_exponential_base_index = i\n",
+        "    result = pull_lever(levers[minimum_lever_exponential_base_index])\n",
+        "    output_sums[minimum_lever_exponential_base_index] += pull_lever(levers[minimum_lever_exponential_base_index])\n",
+        "    output_instances[minimum_lever_exponential_base_index] += 1\n",
+        "    return result\n",
+        "\n",
+        "\n",
+        "def algorithm(levers, pulls):\n",
+        "    output_sums = []\n",
+        "    output_instances = []\n",
+        "    minimum_value = pull_lever(levers[0])\n",
+        "    maximum_value = minimum_value\n",
+        "    intermediate_range = 0.001\n",
+        "    output_sums.append(minimum_value)\n",
+        "    output_instances.append(1)\n",
+        "    count = 1\n",
+        "    current_lever = 1\n",
+        "    while current_lever < len(levers):\n",
+        "        recent_result = pull_lever(levers[current_lever])\n",
+        "        count += 1\n",
+        "        if recent_result < minimum_value:\n",
+        "            minimum_value = recent_result\n",
+        "            intermediate_range = maximum_value - minimum_value\n",
+        "        elif recent_result > maximum_value:\n",
+        "            maximum_value = recent_result\n",
+        "            intermediate_range = maximum_value - minimum_value\n",
+        "        output_sums.append(recent_result)\n",
+        "        output_instances.append(1)\n",
+        "        for i in range(2):\n",
+        "            recent_result = pull_known_lever(levers, output_sums, output_instances, intermediate_range)\n",
+        "            count += 1\n",
+        "            if recent_result < minimum_value:\n",
+        "                minimum_value = recent_result\n",
+        "                intermediate_range = maximum_value - minimum_value\n",
+        "            elif recent_result > maximum_value:\n",
+        "                maximum_value = recent_result\n",
+        "                intermediate_range = maximum_value - minimum_value\n",
+        "        current_lever += 1\n",
+        "    for i in range(count, pulls):\n",
+        "        recent_result = pull_known_lever(levers, output_sums, output_instances, intermediate_range)\n",
+        "        if recent_result < minimum_value:\n",
+        "            minimum_value = recent_result\n",
+        "            intermediate_range = maximum_value - minimum_value\n",
+        "        elif recent_result > maximum_value:\n",
+        "            maximum_value = recent_result\n",
+        "            intermediate_range = maximum_value - minimum_value\n",
+        "    result_sum = 0\n",
+        "    for current_sum in output_sums:\n",
+        "        result_sum += current_sum\n",
+        "    return result_sum"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hLWCHhKbFPzj",
+        "colab_type": "text"
+      },
+      "source": [
+        "For the purposes of testing, a comprehensive lever capable of replicating a variety of test conditions is desirable."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SeZqByaFEVZp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import random\n",
+        "\n",
+        "def pull_lever(lever):\n",
+        "  if lever[0] == 0:\n",
+        "    if lever[1] < random.random():\n",
+        "      return 1\n",
+        "    else:\n",
+        "      return 0\n",
+        "  else:\n",
+        "    return 0"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nnt9vEGuFkRF",
+        "colab_type": "text"
+      },
+      "source": [
+        "As an initial test, I will try using a series of 10 levers, each with a different chance of returning a consistent reward, from 0% to 90%.\n",
+        "\n",
+        "In 128 pulls, a solution with perfect information would on average"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0hCFoOmuGjCQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "d727e3c6-5e87-4300-fdf0-5fb663520450"
+      },
+      "source": [
+        "# in order\n",
+        "levers = [[0,0.0],[0,0.1],[0,0.2],[0,0.3],[0,0.4],[0,0.5],[0,0.6],[0,0.7],[0,0.8],[0,0.9]]\n",
+        "print(algorithm(levers,128))\n",
+        "\n",
+        "# in reverse order\n",
+        "levers = [[0,0.9],[0,0.8],[0,0.7],[0,0.6],[0,0.5],[0,0.4],[0,0.3],[0,0.2],[0,0.1],[0,0.0]]\n",
+        "print(algorithm(levers,128))\n",
+        "\n",
+        "# in random orders\n",
+        "random.shuffle(levers)\n",
+        "print(algorithm(levers,128))"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(83, 128)\n",
+            "(77, 128)\n",
+            "(83, 128)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rZJEzQ_pJPep",
+        "colab_type": "text"
+      },
+      "source": [
+        "Through repeated testing, I was able to accumulate the following averages, after 128 lever pulls:\n",
+        "\n",
+        "in order: 83.08\n",
+        "\n",
+        "in reverse order: 83.36\n",
+        "\n",
+        "in random order: 85.76\n",
+        "\n",
+        "In this, grouping similar levers makes it difficult for the program to identify the ideal solution."
       ]
     }
   ]
