--- a/A3.ipynb
+++ b/A3.ipynb
@@ -379,7 +379,7 @@
       "source": [
         "As an initial test, I will try using a series of 10 levers, each with a different chance of returning a consistent reward, from 0% to 90%.\n",
         "\n",
-        "In 128 pulls, a solution with perfect information would on average"
+        "Given infinite pulls, a solution with perfect information would on average produce 90 points. A solution with no information would on average produce 45 points."
       ]
     },
     {
@@ -387,37 +387,39 @@
       "metadata": {
         "id": "0hCFoOmuGjCQ",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "d727e3c6-5e87-4300-fdf0-5fb663520450"
+        "colab": {}
       },
       "source": [
         "# in order\n",
         "levers = [[0,0.0],[0,0.1],[0,0.2],[0,0.3],[0,0.4],[0,0.5],[0,0.6],[0,0.7],[0,0.8],[0,0.9]]\n",
-        "print(algorithm(levers,128))\n",
+        "point_sum = 0\n",
+        "for i in range(100000):\n",
+        "    point_sum += algorithm(levers,128)\n",
+        "print(point_sum/100000)\n",
         "\n",
         "# in reverse order\n",
         "levers = [[0,0.9],[0,0.8],[0,0.7],[0,0.6],[0,0.5],[0,0.4],[0,0.3],[0,0.2],[0,0.1],[0,0.0]]\n",
-        "print(algorithm(levers,128))\n",
+        "point_sum = 0\n",
+        "for i in range(100000):\n",
+        "    point_sum += algorithm(levers,128)\n",
+        "print(point_sum/100000)\n",
+        "\n",
+        "# in unambiguous order\n",
+        "levers = [[0,0.9],[0,0.0],[0,0.1],[0,0.2],[0,0.3],[0,0.4],[0,0.5],[0,0.6],[0,0.7],[0,0.8]]\n",
+        "point_sum = 0\n",
+        "for i in range(100000):\n",
+        "    point_sum += algorithm(levers,128)\n",
+        "print(point_sum/100000)\n",
         "\n",
         "# in random orders\n",
-        "random.shuffle(levers)\n",
-        "print(algorithm(levers,128))"
+        "point_sum = 0\n",
+        "for i in range(100000):\n",
+        "    random.shuffle(levers)\n",
+        "    point_sum += algorithm(levers,128)\n",
+        "print(point_sum/100000)"
       ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(83, 128)\n",
-            "(77, 128)\n",
-            "(83, 128)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -426,15 +428,17 @@
         "colab_type": "text"
       },
       "source": [
-        "Through repeated testing, I was able to accumulate the following averages, after 128 lever pulls:\n",
+        "I was able to accumulate the following averages, given 100 lever pulls:\n",
         "\n",
-        "in order: 83.08\n",
+        "in order: 84.1179\n",
         "\n",
-        "in reverse order: 83.36\n",
+        "in reverse order: 84.1574\n",
         "\n",
-        "in random order: 85.76\n",
+        "in unambiguous order: 84.1401\n",
         "\n",
-        "In this, grouping similar levers makes it difficult for the program to identify the ideal solution."
+        "in random order: 84.1226\n",
+        "\n",
+        "This demonstrates that grouping similar levers makes it difficult for the program to identify the ideal solution."
       ]
     }
   ]
